# pomoco

./: .gitignore  .gitmodules  README.md  main.py  my_mpl_style.yaml  pyproject.toml  synthetic_brainset.ipynb
mini_poyo/: README.md
mini_poyo/configs/: train.yaml
mini_poyo/data/: dataset.py
moco_rnn/: README.md  rnn.py
notebooks/: rnn_training.ipynb  testing.ipynb  training.ipynb
plotting/: plotting_utils.py  style_sheet.mplstyle
synthetic-data/: plotting_utils.py  synthetic_brainset.ipynb
synthetic_data/: dataset.py  gaussian_process.py  generator.py  kernels.py  plotting_utils.py
toy_rnn/: dataset.py  rnn.py
