[project]
name = "pomoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brainsets",
    "pytorch-brain",
    "ratinabox>=1.15.3",
]

[tool.uv.workspace]
members = [
    "brainsets",
    "torch_brain",
]

[tool.uv.sources]
brainsets = { workspace = true, editable = true }
pytorch-brain = { workspace = true, editable = true }
